# cpp_tests

./: CMakeLists.txt  README.md
BTree/: BTree.h  CMakeLists.txt  main.cpp
Chess/: README.md
Chess/Model/api/: Board.h  Game.h  History.h  Move.h  Piece.h  Side.h  Types.h
Chess/Model/include/: BoardImpl.h  GameImpl.h  HistoryImpl.h  Model.h  PieceBase.h  PieceBishop.h  PieceKing.h  PieceKnight.h  PiecePawn.h  PieceQueen.h  PieceRook.h  SideImpl.h
Chess/Model/src/: BoardImpl.cpp  GameImpl.cpp  HistoryImpl.cpp  Model.cpp  PieceBase.cpp  PieceBishop.cpp  PieceKing.cpp  PieceKnight.cpp  PiecePawn.cpp  PieceQueen.cpp  PieceRook.cpp  SideImpl.cpp
Chess/Model/tsrc/: tsrc.pro  tst_src.cpp
Chess/Ui/: Bubble.qml  Constants.js  Logic.js  Main.qml  Piece.qml  Ui.pro  qml.qrc
Chess/Ui/include/: Board.h  Game.h  MoveResult.h  Piece.h
Chess/Ui/src/: Board.cpp  Game.cpp  MoveResult.cpp  Piece.cpp  main.cpp
FalseSharing/: CMakeLists.txt  README.md  main.cpp
HashMap/: CMakeLists.txt  HashMap.h  main.cpp
ThreadingTest/: CMakeLists.txt  README.md  main.cpp
algorithms/: CMakeLists.txt
algorithms/leetcode.com/: CMakeLists.txt  README.txt
algorithms/leetcode.com/valid-parentheses/: CMakeLists.txt  README.txt  main.cpp
algorithms/proglib.io/: CMakeLists.txt  README.md
algorithms/proglib.io/test2/: CMakeLists.txt  main.cpp
algorithms/test.12.09.2023/: CMakeLists.txt  README.md  main.cpp
algorithms/yandex/: CMakeLists.txt  README.txt
algorithms/yandex/task_1/: CMakeLists.txt  main.cpp
btree/: BTree.h  CMakeLists.txt
parralel_parsing/: CMakeLists.txt  README.md  generator.cpp  parser.cpp
provider_consumer/: CMakeLists.txt  Queue.h  main.cpp
provider_supplier/: CMakeLists.txt  Queue.h  main.cpp
square_solver/: CMakeLists.txt  Consumer.cpp  Consumer.h  Producer.cpp  Producer.h  Queue.h  README.md  Worker.cpp  Worker.h  main.cpp
tests/: CMakeLists.txt  Cpp17.cpp  CtorsDtors.cpp  Luxtest.cpp  SmartPointers.cpp  atomics.cpp  sizeof.cpp  std-forward.cpp  std-move.cpp
